# transcriber

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  sermon-style.json  transcriber.py
.github/workflows/: release.yml
