[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "transcriber"
version = "1.0.0"
description = "Transcribe audio and video files locally using faster-whisper"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "av",
]

[project.optional-dependencies]
gpu = [
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.scripts]
transcriber = "transcriber:main"
